timestamp alignment per models and tests views fixed

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -704,3 +704,9 @@ div[role=menu] {
 #modelFormSelectClass {
     margin-top: 28px !important;
 }
+
+.timeStampCss {
+    text-align: center;
+    border-top: 1px solid #aaa !important;
+    vertical-align: middle !important;
+}
