--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -710,3 +710,15 @@ div[role=menu] {
     border-top: 1px solid #aaa !important;
     vertical-align: middle !important;
 }
+
+.toggleClass {
+    float: right;
+}
+
+.toggleHeaderClass {
+    padding-right: 20px;
+    cursor: pointer;
+    text-align: right;
+}
+
+
