fixed login buttons style, icon logged user style, logo onclick redirect to scores page

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -665,7 +665,7 @@ div[role=menu] {
 
 .loginButton {
 	a{
-		background-color : blue !important;
+		background-color : #37474f !important;
 	}
 }
 
@@ -675,7 +675,7 @@ div[role=menu] {
 
 .signUpButton {
 	a{
-		background-color : lightgrey !important;
+		background-color : #37474f !important;
 	}
 }
 
