--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -653,7 +653,7 @@ div[role=menu] {
     }
 }
 
-.userButton {
+.user-button {
 	span{
 	    font-size : 15px !important;
 	    color : white !important;
@@ -663,23 +663,23 @@ div[role=menu] {
 	width : 96px;
 }
 
-.loginButton {
+.login-button {
 	a{
 		background-color : #37474f !important;
 	}
 }
 
-.loggedIcon{
+.logged-icon{
     left: 10px;
 }
 
-.signUpButton {
+.signup-button {
 	a{
 		background-color : #37474f !important;
 	}
 }
 
-.logoutButton {
+.logout-button {
 	a{
 		background-color : lightgrey !important;
 	}
