--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -108,6 +108,7 @@ body {
     margin-top: 20px !important;
     margin-left: 10px !important;
     border-radius: 25px !important;
+    z-index: 1;
     >svg {
         color: #757575 !important;
         margin-top: -4px !important;
