fix: styling/functionality autocomplete

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -9,7 +9,7 @@ body {
     /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to top, #ada996, #f2f2f2, #dbdbdb, #eaeaea);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .mainContainer {
@@ -133,6 +133,10 @@ body {
     line-height: 36px !important;
 }
 
+.MuiFormControl-marginNormal {
+    margin: 0 !important;
+}
+
 .chips {
     display: flex;
 }
@@ -246,9 +250,6 @@ input {
 
 .scidash-materialui-field {
     float: right;
-    div {
-        display: none;
-    }
     input {
         box-shadow: none;
     }
