fix: user panel

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -137,6 +137,12 @@ body {
     margin: 0 !important;
 }
 
+.MuiButton-root {
+    text-transform: initial !important;
+    margin: 0 16px !important;
+    padding: 3px 16px !important;
+}
+
 .chips {
     display: flex;
 }
@@ -256,6 +262,7 @@ input {
 }
 
 .datepicker-wrapper {
+    margin-top: -9px;
     display: flex;
     justify-content: center;
 }
