--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -143,6 +143,14 @@ body {
     padding: 3px 16px !important;
 }
 
+.MuiChip-colorPrimary{
+    background-color: rgb(121, 85, 72) !important;
+}
+
+.MuiChip-colorSecondary{
+    background-color: rgb(239, 83, 80) !important;
+}
+
 .chips {
     display: flex;
 }
