fix: fixes for scheduling page

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -591,6 +591,7 @@ div[role=menu] {
         // border-radius: 25px;
         position: relative;
         .scrolling3 {
+            margin-top: 8px;
             width: 98%;
             height: 200px;
             overflow-y: auto; // border: 1px solid black;
