--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -28,6 +28,7 @@ body {
     bottom: 60px;
     z-index: 100 !important;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 #header {
@@ -648,10 +649,12 @@ div[role=menu] {
             align-items: center;
             .model-name {
                 flex: 3;
+                color: black !important;
             }
             .url {
                 margin-left: 15px;
                 flex: 9;
+                color: black !important;
             }
             .icons {
                 flex: 1;
@@ -761,6 +764,8 @@ div[role=menu] {
 #testFormSelectClass,
 #modelFormSelectClass {
     margin-top: 12px !important;
+    color: black !important;
+    width: 130px;
 }
 
 .timeStampCss {
@@ -781,4 +786,89 @@ div[role=menu] {
 
 #show-all-button {
     margin-left: 0 !important;
+}
+
+/*** Input field styling from Bootstrap **/
+.activeInput {
+  input, textarea {
+      -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
+      -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
+      -ms-transition: border linear 0.2s, box-shadow linear 0.2s;
+      -o-transition: border linear 0.2s, box-shadow linear 0.2s;
+      transition: border linear 0.2s, box-shadow linear 0.2s;
+      -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+      -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    }
+    input:focus, textarea:focus {
+      outline: 0;
+      border-color: rgba(82, 168, 236, 0.8);
+      -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
+      -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
+      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
+    }
+    input[type=file]:focus, input[type=checkbox]:focus, select:focus {
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
+      outline: 1px dotted #666;
+    }
+    
+    input[type="text"],
+    input[type="password"],
+    .ui-autocomplete-input,
+    textarea,
+    .uneditable-input {
+      display: inline-block;
+      padding: 4px;
+      font-size: 13px;
+      line-height: 18px;
+      color: black;
+      border: 1px solid #ccc;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      border-radius: 3px;
+    }
+}
+
+.disabledInput {
+    input, textarea {
+        -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
+        -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
+        -ms-transition: border linear 0.2s, box-shadow linear 0.2s;
+        -o-transition: border linear 0.2s, box-shadow linear 0.2s;
+        transition: border linear 0.2s, box-shadow linear 0.2s;
+        -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+        -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+        box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+      }
+      input:focus, textarea:focus {
+        outline: 0;
+        border-color: rgba(82, 168, 236, 0.8);
+        -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
+        -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
+        box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
+      }
+      input[type=file]:focus, input[type=checkbox]:focus, select:focus {
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+        outline: 1px dotted #666;
+      }
+      
+      input[type="text"],
+      input[type="password"],
+      .ui-autocomplete-input,
+      textarea,
+      .uneditable-input {
+        display: inline-block;
+        padding: 4px;
+        font-size: 13px;
+        line-height: 18px;
+        color: black;
+        border: 1px solid #ccc;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+      }
 }
