--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -644,7 +644,7 @@ div[role=menu] {
         .container {
             width: 100%;
             display: flex;
-            flex-flow: horizontal;
+            flex-direction: row;
             justify-content: space-around;
             align-items: center;
             .model-name {
@@ -688,7 +688,7 @@ div[role=menu] {
             width: 100%;
             display: flex;
             justify-content: flex-start;
-            flex-flow: horizontal;
+            flex-direction: row;
             align-items: center;
         }
         .item {
@@ -765,7 +765,6 @@ div[role=menu] {
 #modelFormSelectClass {
     margin-top: 12px !important;
     color: black !important;
-    width: 130px;
 }
 
 .timeStampCss {
@@ -788,87 +787,17 @@ div[role=menu] {
     margin-left: 0 !important;
 }
 
-/*** Input field styling from Bootstrap **/
-.activeInput {
-  input, textarea {
-      -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
-      -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
-      -ms-transition: border linear 0.2s, box-shadow linear 0.2s;
-      -o-transition: border linear 0.2s, box-shadow linear 0.2s;
-      transition: border linear 0.2s, box-shadow linear 0.2s;
-      -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-      -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-    }
-    input:focus, textarea:focus {
-      outline: 0;
-      border-color: rgba(82, 168, 236, 0.8);
-      -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
-      -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
-      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
-    }
-    input[type=file]:focus, input[type=checkbox]:focus, select:focus {
-      -webkit-box-shadow: none;
-      -moz-box-shadow: none;
-      box-shadow: none;
-      outline: 1px dotted #666;
-    }
-    
-    input[type="text"],
-    input[type="password"],
-    .ui-autocomplete-input,
-    textarea,
-    .uneditable-input {
-      display: inline-block;
-      padding: 4px;
-      font-size: 13px;
-      line-height: 18px;
-      color: black;
-      border: 1px solid #ccc;
-      -webkit-border-radius: 3px;
-      -moz-border-radius: 3px;
-      border-radius: 3px;
-    }
+.dialogTitle {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
 }
 
-.disabledInput {
-    input, textarea {
-        -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
-        -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
-        -ms-transition: border linear 0.2s, box-shadow linear 0.2s;
-        -o-transition: border linear 0.2s, box-shadow linear 0.2s;
-        transition: border linear 0.2s, box-shadow linear 0.2s;
-        -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-        -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-        box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-      }
-      input:focus, textarea:focus {
-        outline: 0;
-        border-color: rgba(82, 168, 236, 0.8);
-        -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
-        -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
-        box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
-      }
-      input[type=file]:focus, input[type=checkbox]:focus, select:focus {
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        box-shadow: none;
-        outline: 1px dotted #666;
-      }
-      
-      input[type="text"],
-      input[type="password"],
-      .ui-autocomplete-input,
-      textarea,
-      .uneditable-input {
-        display: inline-block;
-        padding: 4px;
-        font-size: 13px;
-        line-height: 18px;
-        color: black;
-        border: 1px solid #ccc;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-      }
+.dialogText {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+}
+
+.cardTitle {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 19px;
 }
