feat: redesign user profile popover

--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -712,6 +712,10 @@ div[role=menu] {
     }
 }
 
+.user-info-card {
+    max-width: 480px;
+}
+
 .user-button {
 	span{
 	    font-size : 15px !important;
