--- a/styles/scidash.less
+++ b/styles/scidash.less
@@ -805,3 +805,7 @@ div[role=menu] {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 19px;
 }
+
+.errorAlertDiv {
+    word-break: break-word;
+}
